--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,6 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- pyiron      # simulation framework 
-- temmeta     # TEM image post processing
-- pystem      # image segmentation 
+- pyiron_base=0.1.44
+- temmeta=0.0.6
+- pystem=0.0.22
+- papermill
