updating container.yml

--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -13,5 +13,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+    - name: Check out repository
+      uses: actions/checkout@v2
+    - name: Use local action
     - uses: ./.github/actions/action_docker
     
