--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,7 +1,7 @@
 channels:
 - conda-forge
 dependencies:
-- pyiron_experimental=0.0.1
+- pyiron-experimental=0.0.1
 - temmeta=0.0.6
 - pystem=0.0.25
 - papermill
