--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,11 +3,5 @@ updates:
 - package-ecosystem: pip
   directory: "/.dependabot"
   schedule:
-    interval: daily
+    interval: weekly
   open-pull-requests-limit: 10
-  ignore:
-  - dependency-name: pyiron-base
-    versions:
-    - 0.2.4
-    - 0.2.6
-    - 0.2.7
